--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,28 +7,201 @@
         <variable
                 name="score"
                 type="String" />
+        <variable
+                name="message"
+                type="String" />
+        <variable
+                name="round"
+                type="String" />
+        <variable
+                name="throwNum"
+                type="String" />
     </data>
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".activities.GameActivity">
+            android:orientation="vertical"
+            tools:context=".activities.GameActivity"
+            android:background="@color/gray">
 
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textColor="@color/off_white"
+                android:shadowColor="@color/white"
+                android:shadowDx="1"
+                android:shadowDy="1"
+                android:shadowRadius="2"
+                android:textSize="36sp"
                 android:text="@{score}"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                tools:ignore="MissingConstraints"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/gridLayout"
+                app:layout_constraintTop_toTopOf="parent"
+                android:id="@+id/textView" />
 
-        <Button
-                android:text="Button"
+        <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/button"
-                android:layout_weight="1" />
+                android:layout_gravity="center"
+                android:textColor="@color/off_white"
+                android:shadowColor="@color/white"
+                android:shadowDx="1"
+                android:shadowDy="1"
+                android:shadowRadius="2"
+                android:textSize="30sp"
+                android:text="@{message}"
+                tools:ignore="MissingConstraints"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/gridLayout"
+                app:layout_constraintStart_toStartOf="parent" />
 
-    </LinearLayout>
+
+        <GridLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:padding="50dp"
+                android:columnCount="3"
+                android:rowCount="2"
+                tools:ignore="MissingConstraints"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:id="@+id/gridLayout"
+                app:layout_constraintBottom_toBottomOf="parent">
+
+            <ImageButton
+                    android:id="@+id/die1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/white1"
+                    android:padding="10dp"
+                    android:background="?android:selectableItemBackground" />
+
+            <ImageButton
+                    android:id="@+id/die2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/white2"
+                    android:padding="10dp"
+                    android:background="?android:selectableItemBackground" />
+
+            <ImageButton
+                    android:id="@+id/die3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/white3"
+                    android:padding="10dp"
+                    android:background="?android:selectableItemBackground" />
+
+            <ImageButton
+                    android:id="@+id/die4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/white4"
+                    android:padding="10dp"
+                    android:background="?android:selectableItemBackground" />
+
+            <ImageButton
+                    android:id="@+id/die5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/white5"
+                    android:padding="10dp"
+                    android:background="?android:selectableItemBackground" />
+
+            <ImageButton
+                    android:id="@+id/die6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/white6"
+                    android:padding="10dp"
+                    android:background="?android:selectableItemBackground" />
+
+        </GridLayout>
+
+        <GridLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                tools:ignore="MissingConstraints"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/gridLayout2">
+
+            <Spinner
+                    android:id="@+id/options_spinner"
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:layout_marginStart="15dp"
+                    android:backgroundTint="@color/purple_700" />
+
+            <Button
+                    android:text="Throw"
+                    android:layout_height="80dp"
+                    android:layout_width="wrap_content"
+                    android:layout_marginEnd="15dp"
+                    android:backgroundTint="@color/purple_700"
+                    android:id="@+id/throw_button" />
+
+
+        </GridLayout>
+
+
+        <GridLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                tools:ignore="MissingConstraints"
+                android:columnCount="1"
+                android:rowCount="2"
+                app:layout_constraintTop_toBottomOf="@+id/gridLayout"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:id="@+id/gridLayout2">
+
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:textColor="@color/off_white"
+                    android:shadowColor="@color/white"
+                    android:shadowDx="1"
+                    android:shadowDy="1"
+                    android:shadowRadius="2"
+                    android:textSize="24sp"
+                    android:text="@{round}"
+                    tools:ignore="MissingConstraints"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toTopOf="@+id/gridLayout"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:textColor="@color/off_white"
+                    android:shadowColor="@color/white"
+                    android:shadowDx="1"
+                    android:shadowDy="1"
+                    android:shadowRadius="2"
+                    android:textSize="18sp"
+                    android:text="@{throwNum}"
+                    tools:ignore="MissingConstraints"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toTopOf="@+id/gridLayout"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+
+        </GridLayout>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
