--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -29,12 +29,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:textColor="@color/off_white"
-                android:shadowColor="@color/white"
+                android:textColor="@color/teal_200"
+                android:shadowColor="@color/black"
                 android:shadowDx="1"
-                android:shadowDy="1"
-                android:shadowRadius="2"
+                android:shadowDy="2"
+                android:shadowRadius="1"
                 android:textSize="36sp"
+                android:fontFamily="sans-serif-thin"
                 android:text="@{score}"
                 tools:ignore="MissingConstraints"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -47,12 +48,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:textColor="@color/off_white"
-                android:shadowColor="@color/white"
-                android:shadowDx="1"
-                android:shadowDy="1"
-                android:shadowRadius="2"
-                android:textSize="30sp"
+                android:textColor="@color/teal_700"
+                android:fontFamily="sans-serif-thin"
+                android:textSize="26sp"
                 android:text="@{message}"
                 tools:ignore="MissingConstraints"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -64,7 +62,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:padding="50dp"
+                android:padding="10dp"
                 android:columnCount="3"
                 android:rowCount="2"
                 tools:ignore="MissingConstraints"
@@ -142,12 +140,12 @@
                     android:backgroundTint="@color/purple_700" />
 
             <Button
-                    android:text="Throw"
+                    android:text="@string/nextRoundButton"
                     android:layout_height="80dp"
                     android:layout_width="wrap_content"
                     android:layout_marginEnd="15dp"
                     android:backgroundTint="@color/purple_700"
-                    android:id="@+id/throw_button" />
+                    android:id="@+id/action_button" />
 
 
         </GridLayout>
@@ -170,10 +168,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:textColor="@color/off_white"
-                    android:shadowColor="@color/white"
-                    android:shadowDx="1"
-                    android:shadowDy="1"
-                    android:shadowRadius="2"
+                    android:fontFamily="sans-serif-thin"
                     android:textSize="24sp"
                     android:text="@{round}"
                     tools:ignore="MissingConstraints"
@@ -187,10 +182,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:textColor="@color/off_white"
-                    android:shadowColor="@color/white"
-                    android:shadowDx="1"
-                    android:shadowDy="1"
-                    android:shadowRadius="2"
+                    android:fontFamily="sans-serif-thin"
                     android:textSize="18sp"
                     android:text="@{throwNum}"
                     tools:ignore="MissingConstraints"
