--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -5,6 +5,7 @@
         android:layout_height="wrap_content"
         android:textSize="24sp"
         android:textColor="@color/off_white"
+        android:fontFamily="sans-serif-thin"
         android:shadowColor="@color/white"
         android:shadowDx="1"
         android:shadowDy="1"
