--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -137,14 +137,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:layout_marginStart="15dp"
-                    android:backgroundTint="@color/purple_700" />
+                    android:backgroundTint="@color/teal_700" />
 
             <Button
                     android:text="@string/nextRoundButton"
                     android:layout_height="80dp"
                     android:layout_width="wrap_content"
-                    android:layout_marginEnd="15dp"
-                    android:backgroundTint="@color/purple_700"
+                    android:backgroundTint="@color/teal_700"
                     android:id="@+id/action_button" />
 
 
@@ -183,7 +182,7 @@
                     android:layout_gravity="center"
                     android:textColor="@color/off_white"
                     android:fontFamily="sans-serif-thin"
-                    android:textSize="18sp"
+                    android:textSize="16sp"
                     android:text="@{throwNum}"
                     tools:ignore="MissingConstraints"
                     app:layout_constraintEnd_toEndOf="parent"
