--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="off_white">#EEEEEEEE</color>
     <color name="gray">#151515</color>
+    <color name="light_gray">#1C1C1C</color>
 </resources>
